Interpreter/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", 
                     "'True'", "'False'", "'if'", "'while'", "'write'", 
                     "'read'" ]

    symbolicNames = [ "<INVALID>", "WS", "LEFTPREN", "RIGHTPREN", "LEFTBRACK", 
                      "RIGHTBRACK", "ADD", "SUB", "MUL", "DIV", "ASS", "EQ", 
                      "NEQ", "LE", "LEQ", "GE", "GEQ", "AND", "OR", "NOT", 
                      "TRUE", "FALSE", "IF", "WHILE", "WRITE", "READ", "NUMBER", 
                      "NUM_VAR", "BOOL_VAR" ]

    RULE_program = 0
    RULE_expressions = 1
    RULE_if_statement = 2
    RULE_while_loop = 3
    RULE_block_statement = 4
    RULE_write_val = 5
    RULE_read_var = 6
    RULE_assignment = 7
    RULE_bool_value = 8
    RULE_numeric_value = 9

    ruleNames =  [ "program", "expressions", "if_statement", "while_loop", 
                   "block_statement", "write_val", "read_var", "assignment", 
                   "bool_value", "numeric_value" ]

    EOF = Token.EOF
    WS=1
    LEFTPREN=2
    RIGHTPREN=3
    LEFTBRACK=4
    RIGHTBRACK=5
    ADD=6
    SUB=7
    MUL=8
    DIV=9
    ASS=10
    EQ=11
    NEQ=12
    LE=13
    LEQ=14
    GE=15
    GEQ=16
    AND=17
    OR=18
    NOT=19
    TRUE=20
    FALSE=21
    IF=22
    WHILE=23
    WRITE=24
    READ=25
    NUMBER=26
    NUM_VAR=27
    BOOL_VAR=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExpressionsContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 465567744) != 0):
                self.state = 20
                self.expressions()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(ExprParser.If_statementContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(ExprParser.While_loopContext,0)


        def write_val(self):
            return self.getTypedRuleContext(ExprParser.Write_valContext,0)


        def read_var(self):
            return self.getTypedRuleContext(ExprParser.Read_varContext,0)


        def assignment(self):
            return self.getTypedRuleContext(ExprParser.AssignmentContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_expressions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressions" ):
                listener.enterExpressions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressions" ):
                listener.exitExpressions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressions" ):
                return visitor.visitExpressions(self)
            else:
                return visitor.visitChildren(self)




    def expressions(self):

        localctx = ExprParser.ExpressionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expressions)
        try:
            self.state = 31
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.if_statement()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.while_loop()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 28
                self.write_val()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 4)
                self.state = 29
                self.read_var()
                pass
            elif token in [27, 28]:
                self.enterOuterAlt(localctx, 5)
                self.state = 30
                self.assignment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ExprParser.IF, 0)

        def LEFTPREN(self):
            return self.getToken(ExprParser.LEFTPREN, 0)

        def bool_value(self):
            return self.getTypedRuleContext(ExprParser.Bool_valueContext,0)


        def RIGHTPREN(self):
            return self.getToken(ExprParser.RIGHTPREN, 0)

        def block_statement(self):
            return self.getTypedRuleContext(ExprParser.Block_statementContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = ExprParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_if_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(ExprParser.IF)
            self.state = 34
            self.match(ExprParser.LEFTPREN)
            self.state = 35
            self.bool_value(0)
            self.state = 36
            self.match(ExprParser.RIGHTPREN)
            self.state = 37
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ExprParser.WHILE, 0)

        def LEFTPREN(self):
            return self.getToken(ExprParser.LEFTPREN, 0)

        def bool_value(self):
            return self.getTypedRuleContext(ExprParser.Bool_valueContext,0)


        def RIGHTPREN(self):
            return self.getToken(ExprParser.RIGHTPREN, 0)

        def block_statement(self):
            return self.getTypedRuleContext(ExprParser.Block_statementContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_while_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_loop" ):
                listener.enterWhile_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_loop" ):
                listener.exitWhile_loop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_loop" ):
                return visitor.visitWhile_loop(self)
            else:
                return visitor.visitChildren(self)




    def while_loop(self):

        localctx = ExprParser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_while_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(ExprParser.WHILE)
            self.state = 40
            self.match(ExprParser.LEFTPREN)
            self.state = 41
            self.bool_value(0)
            self.state = 42
            self.match(ExprParser.RIGHTPREN)
            self.state = 43
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFTBRACK(self):
            return self.getToken(ExprParser.LEFTBRACK, 0)

        def RIGHTBRACK(self):
            return self.getToken(ExprParser.RIGHTBRACK, 0)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExpressionsContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_block_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_statement" ):
                listener.enterBlock_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_statement" ):
                listener.exitBlock_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_statement" ):
                return visitor.visitBlock_statement(self)
            else:
                return visitor.visitChildren(self)




    def block_statement(self):

        localctx = ExprParser.Block_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(ExprParser.LEFTBRACK)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 465567744) != 0):
                self.state = 46
                self.expressions()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(ExprParser.RIGHTBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Write_valContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(ExprParser.WRITE, 0)

        def LEFTPREN(self):
            return self.getToken(ExprParser.LEFTPREN, 0)

        def RIGHTPREN(self):
            return self.getToken(ExprParser.RIGHTPREN, 0)

        def numeric_value(self):
            return self.getTypedRuleContext(ExprParser.Numeric_valueContext,0)


        def bool_value(self):
            return self.getTypedRuleContext(ExprParser.Bool_valueContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_write_val

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite_val" ):
                listener.enterWrite_val(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite_val" ):
                listener.exitWrite_val(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite_val" ):
                return visitor.visitWrite_val(self)
            else:
                return visitor.visitChildren(self)




    def write_val(self):

        localctx = ExprParser.Write_valContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_write_val)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(ExprParser.WRITE)
            self.state = 55
            self.match(ExprParser.LEFTPREN)
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 56
                self.numeric_value(0)
                pass

            elif la_ == 2:
                self.state = 57
                self.bool_value(0)
                pass


            self.state = 60
            self.match(ExprParser.RIGHTPREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Read_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(ExprParser.READ, 0)

        def LEFTPREN(self):
            return self.getToken(ExprParser.LEFTPREN, 0)

        def NUM_VAR(self):
            return self.getToken(ExprParser.NUM_VAR, 0)

        def RIGHTPREN(self):
            return self.getToken(ExprParser.RIGHTPREN, 0)

        def BOOL_VAR(self):
            return self.getToken(ExprParser.BOOL_VAR, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_read_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead_var" ):
                listener.enterRead_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead_var" ):
                listener.exitRead_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead_var" ):
                return visitor.visitRead_var(self)
            else:
                return visitor.visitChildren(self)




    def read_var(self):

        localctx = ExprParser.Read_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_read_var)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(ExprParser.READ)
                self.state = 63
                self.match(ExprParser.LEFTPREN)
                self.state = 64
                self.match(ExprParser.NUM_VAR)
                self.state = 65
                self.match(ExprParser.RIGHTPREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.match(ExprParser.READ)
                self.state = 67
                self.match(ExprParser.LEFTPREN)
                self.state = 68
                self.match(ExprParser.BOOL_VAR)
                self.state = 69
                self.match(ExprParser.RIGHTPREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM_VAR(self):
            return self.getToken(ExprParser.NUM_VAR, 0)

        def ASS(self):
            return self.getToken(ExprParser.ASS, 0)

        def numeric_value(self):
            return self.getTypedRuleContext(ExprParser.Numeric_valueContext,0)


        def BOOL_VAR(self):
            return self.getToken(ExprParser.BOOL_VAR, 0)

        def bool_value(self):
            return self.getTypedRuleContext(ExprParser.Bool_valueContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = ExprParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(ExprParser.NUM_VAR)
                self.state = 73
                self.match(ExprParser.ASS)
                self.state = 74
                self.numeric_value(0)
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.match(ExprParser.BOOL_VAR)
                self.state = 76
                self.match(ExprParser.ASS)
                self.state = 77
                self.bool_value(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(ExprParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(ExprParser.FALSE, 0)

        def BOOL_VAR(self):
            return self.getToken(ExprParser.BOOL_VAR, 0)

        def NOT(self):
            return self.getToken(ExprParser.NOT, 0)

        def bool_value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Bool_valueContext)
            else:
                return self.getTypedRuleContext(ExprParser.Bool_valueContext,i)


        def numeric_value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Numeric_valueContext)
            else:
                return self.getTypedRuleContext(ExprParser.Numeric_valueContext,i)


        def EQ(self):
            return self.getToken(ExprParser.EQ, 0)

        def NEQ(self):
            return self.getToken(ExprParser.NEQ, 0)

        def LE(self):
            return self.getToken(ExprParser.LE, 0)

        def LEQ(self):
            return self.getToken(ExprParser.LEQ, 0)

        def GE(self):
            return self.getToken(ExprParser.GE, 0)

        def GEQ(self):
            return self.getToken(ExprParser.GEQ, 0)

        def LEFTPREN(self):
            return self.getToken(ExprParser.LEFTPREN, 0)

        def RIGHTPREN(self):
            return self.getToken(ExprParser.RIGHTPREN, 0)

        def AND(self):
            return self.getToken(ExprParser.AND, 0)

        def OR(self):
            return self.getToken(ExprParser.OR, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_bool_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool_value" ):
                listener.enterBool_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool_value" ):
                listener.exitBool_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool_value" ):
                return visitor.visitBool_value(self)
            else:
                return visitor.visitChildren(self)



    def bool_value(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.Bool_valueContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_bool_value, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 81
                _la = self._input.LA(1)
                if not(_la==20 or _la==21):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.state = 82
                self.match(ExprParser.BOOL_VAR)
                pass

            elif la_ == 3:
                self.state = 83
                self.match(ExprParser.NOT)
                self.state = 84
                self.bool_value(4)
                pass

            elif la_ == 4:
                self.state = 85
                self.numeric_value(0)
                self.state = 86
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 129024) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 87
                self.numeric_value(0)
                pass

            elif la_ == 5:
                self.state = 89
                self.match(ExprParser.LEFTPREN)
                self.state = 90
                self.bool_value(0)
                self.state = 91
                self.match(ExprParser.RIGHTPREN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.Bool_valueContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_bool_value)
                    self.state = 95
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 96
                    _la = self._input.LA(1)
                    if not(_la==17 or _la==18):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 97
                    self.bool_value(3) 
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Numeric_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ExprParser.NUMBER, 0)

        def NUM_VAR(self):
            return self.getToken(ExprParser.NUM_VAR, 0)

        def SUB(self):
            return self.getToken(ExprParser.SUB, 0)

        def numeric_value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Numeric_valueContext)
            else:
                return self.getTypedRuleContext(ExprParser.Numeric_valueContext,i)


        def LEFTPREN(self):
            return self.getToken(ExprParser.LEFTPREN, 0)

        def RIGHTPREN(self):
            return self.getToken(ExprParser.RIGHTPREN, 0)

        def MUL(self):
            return self.getToken(ExprParser.MUL, 0)

        def DIV(self):
            return self.getToken(ExprParser.DIV, 0)

        def ADD(self):
            return self.getToken(ExprParser.ADD, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_numeric_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumeric_value" ):
                listener.enterNumeric_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumeric_value" ):
                listener.exitNumeric_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumeric_value" ):
                return visitor.visitNumeric_value(self)
            else:
                return visitor.visitChildren(self)



    def numeric_value(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.Numeric_valueContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_numeric_value, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.state = 104
                self.match(ExprParser.NUMBER)
                pass
            elif token in [27]:
                self.state = 105
                self.match(ExprParser.NUM_VAR)
                pass
            elif token in [7]:
                self.state = 106
                self.match(ExprParser.SUB)
                self.state = 107
                self.numeric_value(4)
                pass
            elif token in [2]:
                self.state = 108
                self.match(ExprParser.LEFTPREN)
                self.state = 109
                self.numeric_value(0)
                self.state = 110
                self.match(ExprParser.RIGHTPREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 120
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.Numeric_valueContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_numeric_value)
                        self.state = 114
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 115
                        _la = self._input.LA(1)
                        if not(_la==8 or _la==9):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 116
                        self.numeric_value(4)
                        pass

                    elif la_ == 2:
                        localctx = ExprParser.Numeric_valueContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_numeric_value)
                        self.state = 117
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 118
                        _la = self._input.LA(1)
                        if not(_la==6 or _la==7):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 119
                        self.numeric_value(3)
                        pass

             
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[8] = self.bool_value_sempred
        self._predicates[9] = self.numeric_value_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def bool_value_sempred(self, localctx:Bool_valueContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def numeric_value_sempred(self, localctx:Numeric_valueContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 2)
         




